openwebrx (1.2.77) bullseye jammy; urgency=low

  * Refactored web data sources (EIBI, receivers, repeaters).
  * Fixed RepeaterBook updates to happen daily.
  * Fixed KiwiSDR receiver database updates.
  * Added OpenWebRX uptime display to Settings page.
  * Added Linux uptime display to Settings page.
  * Added receivers database update time to Settings page.

 -- Marat Fayzullin <luarvique@gmail.com>  Mon, 17 Jan 2025 16:12:00 +0000

openwebrx (1.2.76) bullseye jammy; urgency=low

  * Refactored SSTV decoder code.
  * Eliminated FFTW3 race condition in SSTV decoder.
  * Disabled AVT-90 SSTV mode due to quality concerns.
  * Fixed Scottie DX VIS code.
  * Improved CW skimmer sensitivity.
  * Not clearing CW skimmer when frequency changes.
  * Settings page shows EIBI schedule download time.
  * Settings page shows repeaters list download time.
  * Using degree sign for temperatures on the map.

 -- Marat Fayzullin <luarvique@gmail.com>  Mon, 20 Jan 2025 16:12:00 +0000

openwebrx (1.2.75) bullseye jammy; urgency=low

  * Added profile-specific transceiver rig control setting.
  * Added CLEAR button to CW skimmer.
  * Replaced ascent/descent symbols Chrome turned into emojis.
  * Removed backslash before underscore in 'freedv_rx'.
  * Now loading UI and audio settings separately.
  * Removed some FT8 debug messages.
  * Silenced CW skimmer audio.

 -- Marat Fayzullin <luarvique@gmail.com>  Fri, 3 Jan 2025 16:12:00 +0000

openwebrx (1.2.74) bullseye jammy; urgency=low

  * Added CWSkimmer decoder using csdr-cwskimmer tool.
  * Added UI.tuneBookmark(), UI.toggleScanner().
  * Fixed FLEX decoder to parse multiple capcodes.
  * Fixed several scanner bugs.
  * No longer translating EIBI CW bookmarks 800Hz down.

 -- Marat Fayzullin <luarvique@gmail.com>  Fri, 22 Nov 2024 16:12:00 +0000

openwebrx (1.2.73) bullseye jammy; urgency=low

  * Added frequency to recorded MP3 filenames.
  * Added 800Hz to newly created CW bookmarks.