@@ -356,7 +356,7 @@ ICAO_COUNTRIES = [
     IcaoCountry(0x084000, 0x084FFF, "Chad", "td"),
     IcaoCountry(0x088000, 0x088FFF, "Togo", "tg"),
     IcaoCountry(0x08A000, 0x08AFFF, "Zambia", "zm"),
-    IcaoCountry(0x08C000, 0x08CFFF, "DR Congo", "cd"),
+    IcaoCountry(0x08C000, 0x08CFFF, "Congo", "cd"),
     IcaoCountry(0x090000, 0x090FFF, "Angola", "ao"),
     IcaoCountry(0x094000, 0x0943FF, "Benin", "bj"),
     IcaoCountry(0x096000, 0x0963FF, "Cabo Verde", "cv"),
@@ -376,7 +376,7 @@ ICAO_COUNTRIES = [
     IcaoCountry(0x0B6000, 0x0B6FFF, "Guyana", "gy"),
     IcaoCountry(0x0B8000, 0x0B8FFF, "Haiti", "ht"),
     IcaoCountry(0x0BA000, 0x0BAFFF, "Honduras", "hn"),
-    IcaoCountry(0x0BC000, 0x0BC3FF, "Saint Vincent and the Grenadines", "vc"),
+    IcaoCountry(0x0BC000, 0x0BC3FF, "Saint Vincent and Grenadines", "vc"),
     IcaoCountry(0x0BE000, 0x0BEFFF, "Jamaica", "jm"),
     IcaoCountry(0x0C0000, 0x0C0FFF, "Nicaragua", "ni"),
     IcaoCountry(0x0C2000, 0x0C2FFF, "Panama", "pa"),
@@ -399,7 +399,7 @@ ICAO_COUNTRIES = [
     # extra entries that are above the UK and thus take precedence
     IcaoCountry(0x400000, 0x4001BF, "Bermuda", "bm"),
     IcaoCountry(0x4001C0, 0x4001FF, "Cayman Islands", "ky"),
-    IcaoCountry(0x400300, 0x4003FF, "Turks and Caicos Islands", "tc"),
+    IcaoCountry(0x400300, 0x4003FF, "Turks and Caicos", "tc"),
     IcaoCountry(0x424135, 0x4241F2, "Cayman Islands", "ky"),
     IcaoCountry(0x424200, 0x4246FF, "Bermuda", "bm"),
     IcaoCountry(0x424700, 0x424899, "Cayman Islands", "ky"),
@@ -418,7 +418,7 @@ ICAO_COUNTRIES = [
     IcaoCountry(0x468000, 0x46FFFF, "Greece", "gr"),
     IcaoCountry(0x470000, 0x477FFF, "Hungary", "hu"),
     IcaoCountry(0x478000, 0x47FFFF, "Norway", "no"),
-    IcaoCountry(0x480000, 0x487FFF, "Kingdom of the Netherlands", "nl"),
+    IcaoCountry(0x480000, 0x487FFF, "Netherlands", "nl"),
     IcaoCountry(0x488000, 0x48FFFF, "Poland", "pl"),
     IcaoCountry(0x490000, 0x497FFF, "Portugal", "pt"),
     IcaoCountry(0x498000, 0x49FFFF, "Czechia", "cz"),
@@ -455,7 +455,7 @@ ICAO_COUNTRIES = [
     IcaoCountry(0x601000, 0x6013FF, "Kyrgyzstan", "kg"),
     IcaoCountry(0x601800, 0x601BFF, "Turkmenistan", "tm"),
     IcaoCountry(0x680000, 0x6803FF, "Bhutan", "bt"),
-    IcaoCountry(0x681000, 0x6813FF, "Micronesia, Federated States of", "fm"),
+    IcaoCountry(0x681000, 0x6813FF, "Micronesia", "fm"),
     IcaoCountry(0x682000, 0x6823FF, "Mongolia", "mn"),
     IcaoCountry(0x683000, 0x6833FF, "Kazakhstan", "kz"),
     IcaoCountry(0x684000, 0x6843FF, "Palau", "pw"),
