@@ -3,6 +3,7 @@ openwebrx (1.2.77) bullseye jammy; urgency=low
   * Refactored web data sources (EIBI, receivers, repeaters).
   * Fixed RepeaterBook updates to happen daily.
   * Fixed KiwiSDR receiver database updates.
+  * Added aircraft and country lookup by ICAO ID (from TAR1090).
   * Added OpenWebRX uptime display to Settings page.
   * Added Linux uptime display to Settings page.
   * Added receivers database update time to Settings page.
